--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.0.0",
     "fs": "^0.0.1-security",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.3",
     "path": "^0.12.7",
-    "solc": "^0.4.17",
+    "solc": "^0.8.11",
     "web3": "^1.6.1"
   }
 }
